# pad-project

./: .gitignore  CMakeLists.txt  main.cpp  presentation.pptx  trimatrix.cpp  trimatrix.h  upcxx_notes.txt
benchmark/: CMakeLists.txt  benchmark.h  test.cpp
extra/: reduction_upcxx_local_team.cpp  reduction_upcxx_openmp.cpp  reduction_upcxx_openmp_local_team.cpp  symmetrize_openmp.cpp
extra/matrix/: matrix.h  trimatrix.h
reduction/: CMakeLists.txt  accumulate.h  benchmark.sh  dist_upcxx.cpp  dist_upcxx_shared.cpp  numa.cpp  openmp.cpp  plot_reduction.py  plot_reduction_openmp.py  reduction-dist-knl-upcxx.csv  reduction-dist-skl-upcxx-openmp.csv  reduction-dist-skl-upcxx.csv  reduction-numa-mp-knl1-16.csv  reduction-numa-mp-knl1-2.csv  reduction-numa-mp-knl1-32.csv  reduction-numa-mp-knl1-64.csv  reduction-numa-mp-media1-2.csv  reduction-numa-mp-media1-4.csv  reduction-serial-mp-knl1-1.csv  reduction-serial-mp-media1-1.csv  reduction-shared-knl-upcxx-openmp.csv  reduction-shared-skl-upcxx-openmp.csv  reduction-shared-skl-upcxx.csv  reduction-upcxx-mp-knl1-16.csv  reduction-upcxx-mp-knl1-2.csv  reduction-upcxx-mp-knl1-32.csv  reduction-upcxx-mp-knl1-4.csv  reduction-upcxx-mp-knl1-64.csv  reduction-upcxx-mp-knl[1-4]-4.csv  reduction-upcxx-mp-knl[1-4]-64.csv  reduction-upcxx-mp-media1-4.csv  reduction-upcxx-mp-media[1-4]-4.csv  serial.cpp  smp_openmp.cpp  smp_upcxx.cpp  smp_upcxx_shared.cpp  test.cpp  test.sh  upcxx.cpp  upcxx_builtin.cpp  (+6 more)
reduction/csv/: reduction-dist-knl-upcxx-openmp.csv  reduction-dist-knl-upcxx.csv  reduction-dist-skl-upcxx-openmp.csv  reduction-dist-skl-upcxx.csv  reduction-knl-dist-16.csv  reduction-knl-dist-upcxx-128.csv  reduction-knl-dist-upcxx-16.csv  reduction-knl-dist-upcxx-256.csv  reduction-knl-dist-upcxx-32.csv  reduction-knl-dist-upcxx-4.csv  reduction-knl-dist-upcxx-64.csv  reduction-knl-dist-upcxx-8.csv  reduction-knl-serial.csv  reduction-knl-shared-4.csv  reduction-knl-shared-openmp-16.csv  reduction-knl-shared-openmp-2.csv  reduction-knl-shared-openmp-32.csv  reduction-knl-shared-openmp-4.csv  reduction-knl-shared-openmp-64.csv  reduction-knl-shared-openmp-8.csv  reduction-knl-shared-upcxx-16.csv  reduction-knl-shared-upcxx-2.csv  reduction-knl-shared-upcxx-32.csv  reduction-knl-shared-upcxx-4.csv  reduction-knl-shared-upcxx-64.csv  reduction-knl-shared-upcxx-8.csv  reduction-numa-mp-knl1-16.csv  reduction-numa-mp-knl1-2.csv  reduction-numa-mp-knl1-32.csv  reduction-numa-mp-knl1-4.csv  reduction-numa-mp-knl1-64.csv  reduction-numa-mp-knl1-8.csv  reduction-numa-mp-media1-2.csv  reduction-numa-mp-media1-4.csv  reduction-numa-mp-media1-8.csv  reduction-serial-mp-knl1-1.csv  reduction-serial-mp-media1-1.csv  reduction-shared-knl-upcxx-openmp.csv  reduction-shared-knl-upcxx.csv  reduction-shared-skl-upcxx-openmp.csv  (+27 more)
reduction/scripts/: benchmark.sh
scripts/: plot_reduction.py
stencil/: CMakeLists.txt  benchmark.sh  openmp.cpp  plot_stencil.py  serial.cpp  stencil-benchmark.cpp  stencil-parallel.cpp  stencil-parallel.h  test.sh  upcxx.cpp  wiki.md
stencil/FDTD3d/: stencil-benchmark.cpp  stencil-parallel.cpp  stencil-parallel.h
stencil/FDTD3d_template/: stencil-benchmark.cpp  stencil-parallel.cpp
stencil/csv/: stencil-dist-knl-upcxx.csv  stencil-dist-skl-upcxx.csv  stencil-shared-knl-upcxx.csv  stencil-shared-skl-upcxx.csv
stencil/include/: stencil-print.hpp  stencil-upcxx.hpp  stencil.hpp  upcxx.hpp  upcxx_print.hpp  upcxx_stencil.hpp
symmetrize/: CMakeLists.txt  benchmark.cpp  benchmark.sh  matrix.h  numa.cpp  openmp.cpp  plot_symmetrize.py  plot_symmetrize_openmp.py  serial.cpp  serial_test.cpp  symmetrize-knl-dist-upcxx.csv  symmetrize-knl-shared-openmp.csv  symmetrize-knl-shared-upcxx.csv  symmetrize-skl-dist-upcxx.csv  symmetrize-skl-shared-upcxx.csv  test.cpp  test.sh  trimatrix.h  upcxx.cpp  upcxx_openmp.cpp  wiki.md
symmetrize/csv/: symmetrize-dist-knl-upcxx-openmp.csv  symmetrize-dist-knl-upcxx.csv  symmetrize-dist-skl-upcxx-openmp.csv  symmetrize-dist-skl-upcxx.csv  symmetrize-knl-dist-upcxx-128.csv  symmetrize-knl-dist-upcxx-16.csv  symmetrize-knl-dist-upcxx-256.csv  symmetrize-knl-dist-upcxx-32.csv  symmetrize-knl-dist-upcxx-4.csv  symmetrize-knl-dist-upcxx-64.csv  symmetrize-knl-dist-upcxx-8.csv  symmetrize-knl-dist-upcxx.csv  symmetrize-knl-serial.csv  symmetrize-knl-shared-openmp-16.csv  symmetrize-knl-shared-openmp-2.csv  symmetrize-knl-shared-openmp-32.csv  symmetrize-knl-shared-openmp-4.csv  symmetrize-knl-shared-openmp-64.csv  symmetrize-knl-shared-openmp-8.csv  symmetrize-knl-shared-openmp.csv  symmetrize-knl-shared-upcxx-16.csv  symmetrize-knl-shared-upcxx-2.csv  symmetrize-knl-shared-upcxx-32.csv  symmetrize-knl-shared-upcxx-4.csv  symmetrize-knl-shared-upcxx-64.csv  symmetrize-knl-shared-upcxx-8.csv  symmetrize-knl-shared-upcxx.csv  symmetrize-numa-mp-knl1-16.csv  symmetrize-numa-mp-knl1-2.csv  symmetrize-numa-mp-knl1-32.csv  symmetrize-numa-mp-knl1-4.csv  symmetrize-numa-mp-knl1-64.csv  symmetrize-numa-mp-knl1-8.csv  symmetrize-numa-mp-media1-2.csv  symmetrize-numa-mp-media1-4.csv  symmetrize-numa-mp-media1-8.csv  symmetrize-serial-mp-knl1-1.csv  symmetrize-serial-mp-media1-1.csv  symmetrize-shared-knl-upcxx-openmp.csv  symmetrize-shared-knl-upcxx.csv  (+30 more)
symmetrize/matrix/: CMakeLists.txt  matrix.h  offsets.h  test.cpp  trimatrix.h
symmetrize/scripts/: benchmark.sh
